fix: text align progressBar

--- a/apps/site-03/app/guess/detail/[matchId]/components/bettingRow/bettingRow.module.scss
+++ b/apps/site-03/app/guess/detail/[matchId]/components/bettingRow/bettingRow.module.scss
@@ -23,6 +23,7 @@
         .play {
             color: #fff;
             font-size: 14px;
+            margin-left: -4px;
         }
 
         :global(.ui-progressBar) {
